tests/baselines/reference/boolInsteadOfBoolean.errors.txt
boolInsteadOfBoolean.ts(1,8): error TS2304: Cannot find name 'bool'.


==== boolInsteadOfBoolean.ts (1 errors) ====
    var x: bool;
           ~~~~
!!! error TS2304: Cannot find name 'bool'.
    var a: boolean = x;
    x = a;